Dropdown z-index issue resolved

--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -8,7 +8,7 @@
   &-menu {
     &__items {
       min-width: 120px;
-      z-index: 10;
+      z-index: 100;
       height: unset;
       padding: 0;
 
